--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.6.8",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.3.2",
     "mkrc": "^1.3.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
