--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add-to-homescreen": "^3.2.6",
     "firebase": "^8.6.8",
     "leaflet": "^1.7.1",
     "mkrc": "^1.3.36",
