--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Grand Bequest",
   "icons": [
     {
-      "src": "logo64.png",
+      "src": "GrandBequestLogo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "GrandBequestLogo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "GrandBequestLogo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
