--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "jest": "^26.6.0",
     "sass": "^1.35.1"
   },
   "browserslist": [
