--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
     ">0.2%",
